style.css
html {
    font-size: 1em;
}

body {
    background-color: white;
    font-family: Raleway, Arial, serif;
    font-weight: 400;
    line-height: 1.45;
    color: #333;
}

p {
    margin-bottom: 1.3em;
}

h1,
h2,
h3,
h4 {
    margin: 1.414em 0 0.5em;
    font-weight: inherit;
    line-height: 1.2;
}

h1 {
    margin-top: 0;
    font-size: 3.998em;
}

h2 {
    font-size: 2.827em;
}

h3 {
    font-size: 1.999em;
}

h4 {
    font-size: 1.414em;
}

small,
.font_small {
    font-size: 0.707em;
}

html,
body {
    margin: 0;
    padding: 0;
}

.title {
    font-size: 5em;
    font-family: Raleway, Arial, sans-serif;
    text-align: center;
    color: white;
    background-color: #1365B2;
    margin: 0;
    text-decoration: none;
}

.titlebar {
    text-align: center;
    background-color: white;
}

.navbar ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    display: inline-block;
    text-align: center;
    font-size: 16px;
}

.navbar li {
    float: left;
}

.navbar li a {
    display: block;
    color: white;
    background-color: #333;
    text-align: center;
    padding: 10px 16px;
    text-decoration: none;
    border-left: 1px solid #777777;
    border-right: 1px solid #777777;
    font-family: Raleway, Arial, sans-serif;
}

.navbar li a:hover {
    background-color: #4A4346;
}

.dropdown {
    display: inline-block:
}

.dropdown-content {
    display: none;
    position: absolute;
    min-width: 160px;
    box-shadow: 0 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
}

.dropdown-content a {
    text-decoration: none;
    display: block;
}

.dropdown-content a:hover {
    background-color: #333;
}

.dropdown:hover .dropdown-content {
    display: block;
}

.active {
    font-weight: 700;
    background-color: #111;
}

.navbar {
    text-align: center;
    background-color: #333;
    font-size: 0;
}

.footer {
    background-color: #333;
    padding: 13px;
    font-size: 10px;
    color: white;
    font-family: Raleway, Arial, sans-serif;
}

.page-wrap {
    width: 960px;
    padding: 0px 50px;
    margin: 0 auto;
    background-color: #E7E3D8;
    height: 825px;
}

.page-wraplarge {
    width: 960px;
    padding: 0px 50px;
    margin: 0 auto;
    background-color: #E7E3D8;
    height: 1500px;
}

.pagetitle {
    text-align: center;
    font-size: 1em;
    font-family: "Poiret One", Arial, sans-serif;
    padding-top: 15px;
}

.content {
    padding: 0 20px;
    font-family: Raleway, Arial, sans-serif;
}

.appointmentbutton {
    background-color: #333;
    font-family: "Poiret One", Arial, sans-serif;
    color: #fff;
    font-weight: 500;
    letter-spacing: 1.50px;
    padding: 16px 40px;
    margin-top: 50px;
    text-decoration: none;
    text-transform: uppercase;
}

.appbuttonbox {
    text-align: center;
    position: relative;
    top: 50px;
}

.appointmentbutton:hover {
    background-color: #1365B2;
}

.column {
    width: 33%;
    text-align: center;
    float: left;
}

.column-parting {
    padding: 0 20px;
}

.morebutton {
    background-color: white;
    font-family: Raleway, Arial, sans-serif;
    color: black;
    font-weight: 300;
    letter-spacing: 1.50px;
    padding: 12px 26px;
    margin-top: 50px;
    text-decoration: none;
    text-transform: uppercase;
    border: 1px solid #333;
}

.morebutton:hover {
    background-color: #1365B2;
    color: #ffffff;
}

.column h1,
.column h2,
.column h3,
.column h4 {
    margin-top: 0;
}

h2 {
    font-family: Raleway, Arial, sans-serif;
    font-size: 24px;
}

.optionlist li {
    font-size: 20px;
}

.optionlist p {
    font-family: Raleway, Arial, sans-serif;
}

.map {
    float: right;
    padding-top: 20px;
}

.address {
    float: left;
}

.location {
    padding-bottom: 300px
}

.location span {
    color: #1365B2;
    font-weight: 600;
}

.hours li {
    font-weight: 600;
}

.messageform textarea {
    width: 100%;
    height: 150px;
    padding 12px 20px;
    box-sizing: border-box;
    border: 2px solid #ccc;
    border-radius: 4px;
    resize: none;
    font-family: Arial, sans-serif
}

.messageform input {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    box-sizing: border-box;
    border: 2px solid #ccc;
    outline: none;
    font-size: 18px;
    font-family: Arial, sans-serif;
}

.messageform input:focus {
    border: 2px solid #8caee5;
}

.messageform input[type=submit] {
    font-size: 18px;
    width: 100%;
    font-family: Raleway, Arial, sans-serif;
    background-color: #7E7E7C;
    text-decoration: none;
    display: block;
    padding: 7px 0;
}

.messageform input[type=submit]:hover {
    color: white;
    background-color: #1365B2;
}

